# Bot-Network

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  client.cpp  client.py  common.h  compile.sh  echo_client.py  echo_server.py  host.cpp  host.py  main.py  main.rs  run_client.py  run_host.py  server.py  test.py
bot_rust/: .gitignore  Cargo.toml
bot_rust/src/: main.rs  server.rs
bot_rust/src/client/: Cargo.toml
bot_rust/src/client/src/: client.rs  main.rs
bot_rust/src/host/: Cargo.toml
bot_rust/src/host/src/: main.rs
bot_rust/templates/: form.html
second_program/: Cargo.toml
second_program/src/: main.rs
src/: main.rs
src/client/: Cargo.toml
src/client/src/: lib.rs  main.rs
src/config_parser/: config_parser.rs
src/host/: Cargo.toml
src/host/src/: lib.rs
static/: styles.css
templates/: attack.html  home.html  result.html  statistics.html  update.html
