[package]
name = "bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
persistent = "0.4.0"
iron = "0.6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bodyparser = "0.8.0"
router = { version = "0.6" }