[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde_json = "1.0"
dashmap = "5.4.0"
shared-mutex = "0.3.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3