[package]
name = "host_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "host_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3